--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -87,27 +87,18 @@
     </Compile>
     <Compile Include="Convert\ToDrawing\Color.cs" />
     <Compile Include="Convert\ToMedia3D\GeometryModel3D.cs" />
-    <Compile Include="Convert\ToMedia3D\MeshGeometry3D.cs" />
-    <Compile Include="Convert\ToMedia3D\Model3DGroup.cs" />
-    <Compile Include="Convert\ToMedia3D\Point3D.cs" />
-    <Compile Include="Convert\ToMedia3D\Vector3D.cs" />
     <Compile Include="Convert\ToMedia3D\VisualAnalyticalModel.cs" />
     <Compile Include="Convert\ToMedia3D\VisualAperture.cs" />
     <Compile Include="Convert\ToMedia3D\VisualEdges.cs" />
     <Compile Include="Convert\ToMedia3D\VisualPanel.cs" />
     <Compile Include="Convert\ToMedia3D\VisualSpace.cs" />
     <Compile Include="Convert\ToMedia3D\VisualWidget.cs" />
-    <Compile Include="Convert\ToMedia\Color.cs" />
-    <Compile Include="Convert\ToSAM\Point2D.cs" />
-    <Compile Include="Convert\ToSAM\Point3D.cs" />
-    <Compile Include="Convert\ToSAM\Vector3D.cs" />
     <Compile Include="Create\Point3DCollection.cs" />
     <Compile Include="Create\VisualBackground.cs" />
     <Compile Include="Interfaces\IVisualFace3DObject.cs" />
     <Compile Include="Interfaces\IVisualJSAMObject.cs" />
     <Compile Include="Modify\Clear.cs" />
     <Compile Include="Modify\Move.cs" />
-    <Compile Include="Modify\Rotate.cs" />
     <Compile Include="Modify\Zoom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -120,24 +111,20 @@
     <Compile Include="Query\IsNaN.cs" />
     <Compile Include="Query\LookDirection.cs" />
     <Compile Include="Query\Material.cs" />
-    <Compile Include="Query\PitchAxis.cs" />
-    <Compile Include="Query\Plane.cs" />
     <Compile Include="Query\RayMeshGeometry3DHitTestResult.cs" />
-    <Compile Include="Query\RollAxis.cs" />
     <Compile Include="Query\ScaleTransform.cs" />
     <Compile Include="Query\TranslateTransform.cs" />
     <Compile Include="Query\TransparentMaterial.cs" />
     <Compile Include="Query\Viewport3DVisual.cs" />
     <Compile Include="Query\VisualSAMObjects.cs" />
     <Compile Include="Query\Window.cs" />
-    <Compile Include="Query\YawAxis.cs" />
     <Compile Include="Windows\AnalyticalWindow.xaml.cs">
       <DependentUpon>AnalyticalWindow.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HelixToolkit.Wpf">
-      <Version>2.21.1</Version>
+      <Version>2.22.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
@@ -254,6 +241,10 @@
     <ProjectReference Include="..\..\SAM_UI\SAM.Core.UI\SAM.Core.UI.csproj">
       <Project>{ad13b1af-2b0b-4d82-80fa-01729d6bc73e}</Project>
       <Name>SAM.Core.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SAM.Geometry.UI.WPF\SAM.Geometry.UI.WPF.csproj">
+      <Project>{64178e8a-35e7-430b-ae4e-46a6c50bdd5e}</Project>
+      <Name>SAM.Geometry.UI.WPF</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
