--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -75,7 +75,6 @@
     <Compile Include="Classes\VisualAperture.cs" />
     <Compile Include="Classes\VisualBackground.cs" />
     <Compile Include="Classes\VisualEdges.cs" />
-    <Compile Include="Classes\VisualJSAMObject.cs" />
     <Compile Include="Classes\VisualPanel.cs" />
     <Compile Include="Classes\VisualSpace.cs" />
     <Compile Include="Classes\VisualWidget.cs" />
@@ -94,7 +93,6 @@
     <Compile Include="Convert\ToMedia3D\VisualWidget.cs" />
     <Compile Include="Create\VisualBackground.cs" />
     <Compile Include="Interfaces\IVisualFace3DObject.cs" />
-    <Compile Include="Interfaces\IVisualJSAMObject.cs" />
     <Compile Include="Modify\Move.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -230,6 +228,10 @@
     <ProjectReference Include="..\..\SAM_UI\SAM.Core.UI\SAM.Core.UI.csproj">
       <Project>{ad13b1af-2b0b-4d82-80fa-01729d6bc73e}</Project>
       <Name>SAM.Core.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SAM.Core.UI.WPF\SAM.Core.UI.WPF.csproj">
+      <Project>{4abd4416-11f4-46be-98ab-37e5dcfe79e1}</Project>
+      <Name>SAM.Core.UI.WPF</Name>
     </ProjectReference>
     <ProjectReference Include="..\SAM.Geometry.UI.WPF\SAM.Geometry.UI.WPF.csproj">
       <Project>{64178e8a-35e7-430b-ae4e-46a6c50bdd5e}</Project>
