--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -63,6 +63,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Classes\UIGeometryObjectModel.cs" />
+    <Compile Include="Classes\VisualGeometryObjectModel.cs" />
     <Compile Include="Classes\VisualGeometry.cs" />
     <Compile Include="Controls\ViewControl.xaml.cs">
       <DependentUpon>ViewControl.xaml</DependentUpon>
@@ -84,23 +85,14 @@
     <Compile Include="Convert\ToSAM\Point3D.cs" />
     <Compile Include="Convert\ToSAM\Vector3D.cs" />
     <Compile Include="Create\Point3DCollection.cs" />
+    <Compile Include="Interfaces\IVisualFace3DObject.cs" />
     <Compile Include="Interfaces\IVisualGeometry.cs" />
-    <Compile Include="Modify\Clear.cs" />
     <Compile Include="Modify\Rotate.cs" />
-    <Compile Include="Modify\Zoom.cs" />
     <Compile Include="Query\Center.cs" />
-    <Compile Include="Query\IsNaN.cs" />
     <Compile Include="Query\LookDirection.cs" />
     <Compile Include="Query\Plane.cs" />
-    <Compile Include="Query\RayMeshGeometry3DHitTestResult.cs" />
-    <Compile Include="Query\RollAxis.cs" />
-    <Compile Include="Query\ScaleTransform.cs" />
-    <Compile Include="Query\TranslateTransform.cs" />
-    <Compile Include="Query\TransparentMaterial.cs" />
     <Compile Include="Query\Window.cs" />
-    <Compile Include="Query\YawAxis.cs" />
     <Compile Include="Query\Material.cs" />
-    <Compile Include="Query\PitchAxis.cs" />
     <Compile Include="Windows\GeometryWindow.xaml.cs">
       <DependentUpon>GeometryWindow.xaml</DependentUpon>
     </Compile>
