--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -63,6 +63,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Classes\UIGeometryObjectModel.cs" />
+    <Compile Include="Classes\VisualBackground.cs" />
     <Compile Include="Classes\VisualGeometryObjectModel.cs" />
     <Compile Include="Classes\VisualGeometry.cs" />
     <Compile Include="Controls\ViewControl.xaml.cs">
@@ -85,6 +86,7 @@
     <Compile Include="Convert\ToSAM\Point3D.cs" />
     <Compile Include="Convert\ToSAM\Vector3D.cs" />
     <Compile Include="Create\Point3DCollection.cs" />
+    <Compile Include="Create\VisualBackground.cs" />
     <Compile Include="Interfaces\IVisualFace3DObject.cs" />
     <Compile Include="Interfaces\IVisualGeometry.cs" />
     <Compile Include="Modify\Rotate.cs" />
@@ -121,6 +123,9 @@
   <ItemGroup>
     <PackageReference Include="HelixToolkit.Wpf">
       <Version>2.22.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
