Two Dimensional Model Implemented

--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -263,5 +263,8 @@
     <Folder Include="Interfaces\" />
     <Folder Include="Modify\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SAM_Section.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
