--- a/WPF/SAM.Core.UI.WPF/SAM.Core.UI.WPF.csproj
+++ b/WPF/SAM.Core.UI.WPF/SAM.Core.UI.WPF.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Classes\ObjectDoubleClickedEventArgs.cs" />
     <Compile Include="Classes\ObjectHooveredEventArgs.cs" />
     <Compile Include="Classes\VisualJSAMObject.cs" />
+    <Compile Include="Create\ModelVisual3D_Text.cs" />
     <Compile Include="Interfaces\IVisualJSAMObject.cs" />
     <Compile Include="Modify\Clear.cs" />
     <Compile Include="Modify\Move.cs" />
@@ -98,8 +99,6 @@
       <Version>2.22.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Create\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
