ModifyObject Updated for Section View

--- a/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
+++ b/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Classes\Segment3DObject.cs" />
     <Compile Include="Create\Material.cs" />
     <Compile Include="Enums\Mode.cs" />
+    <Compile Include="Enums\Parameter\GeometryObjectModelParameter.cs" />
     <Compile Include="Interfaces\IAppearance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
