--- a/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
+++ b/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Classes\Appearance\CurveAppearance.cs" />
     <Compile Include="Classes\Appearance\SurfaceAppearance.cs" />
     <Compile Include="Classes\Appearance\PointAppearance.cs" />
+    <Compile Include="Classes\ShellObject.cs" />
     <Compile Include="Classes\Point3DObject.cs" />
     <Compile Include="Classes\Face3DObject.cs" />
     <Compile Include="Classes\Polygon3DObject.cs" />
