--- a/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
+++ b/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Forms\WelcomeForm.designer.cs">
       <DependentUpon>WelcomeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IUISettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
