--- a/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
+++ b/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Interfaces\IText3DObject.cs" />
     <Compile Include="Interfaces\IAppearance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Mode.cs" />
     <Compile Include="Query\DefaultTextAppearance.cs" />
     <Compile Include="Query\DefaultSurfaceAppearance.cs" />
     <Compile Include="Query\DefaultCurveAppearance.cs" />
