Bug Fixes for Analytical UI Issues

--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -124,6 +124,7 @@
       <DependentUpon>SimulateForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\ISection3DObject.cs" />
+    <Compile Include="Query\DefaultViewSettings.cs" />
     <Compile Include="Query\SurfaceAppearance.cs" />
     <Compile Include="Query\SpaceDiagram.cs" />
     <Compile Include="Query\AirHandlingUnitDiagram.cs" />
