--- a/WPF/SAM.Core.UI.WPF/SAM.Core.UI.WPF.csproj
+++ b/WPF/SAM.Core.UI.WPF/SAM.Core.UI.WPF.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="Modify\Clear.cs" />
     <Compile Include="Modify\Move.cs" />
+    <Compile Include="Modify\Opacity.cs" />
     <Compile Include="Modify\Rotate.cs" />
     <Compile Include="Modify\Zoom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -87,8 +88,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Query\JSAMObject.cs" />
     <Compile Include="Query\Center.cs" />
     <Compile Include="Query\IsNaN.cs" />
+    <Compile Include="Query\Branch.cs" />
+    <Compile Include="Query\Parent.cs" />
     <Compile Include="Query\PitchAxis.cs" />
     <Compile Include="Query\RayMeshGeometry3DHitTestResult.cs" />
     <Compile Include="Query\RollAxis.cs" />
@@ -118,6 +122,11 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\SAM_UI\SAM.Core.UI\SAM.Core.UI.csproj">
+      <Project>{ad13b1af-2b0b-4d82-80fa-01729d6bc73e}</Project>
+      <Name>SAM.Core.UI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
