--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -97,9 +97,14 @@
     <Compile Include="Delegates\ObjectHooveredEventHandler.cs" />
     <Compile Include="Interfaces\IVisualFace3DObject.cs" />
     <Compile Include="Interfaces\IVisualGeometryObject.cs" />
+    <Compile Include="Modify\Select.cs" />
+    <Compile Include="Modify\Highlight.cs" />
+    <Compile Include="Modify\Restore.cs" />
     <Compile Include="Modify\Rotate.cs" />
     <Compile Include="Query\Bounds.cs" />
     <Compile Include="Query\Center.cs" />
+    <Compile Include="Query\HighlightCurveAppearance.cs" />
+    <Compile Include="Query\SelectionSurfaceAppearance.cs" />
     <Compile Include="Query\LookDirection.cs" />
     <Compile Include="Query\SelectableVisualJSAMObject.cs" />
     <Compile Include="Query\Plane.cs" />
