--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -71,7 +71,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\VisualAnalyticalModel.cs" />
     <Compile Include="Controls\AnalyticalModelControl.xaml.cs">
       <DependentUpon>AnalyticalModelControl.xaml</DependentUpon>
     </Compile>
@@ -83,7 +82,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Query\Header.cs" />
-    <Compile Include="Query\Bounds.cs" />
     <Compile Include="Query\Material.cs" />
     <Compile Include="Windows\AnalyticalWindow.xaml.cs">
       <DependentUpon>AnalyticalWindow.xaml</DependentUpon>
@@ -242,6 +240,7 @@
     <None Include="Resources\SAM_SpaceDiagram.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Classes\" />
     <Folder Include="Create\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Modify\" />
