--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Delegates\ObjectDoubleClickedEventHandler.cs" />
     <Compile Include="Delegates\ObjectContextMenuOpeningEventHandler.cs" />
     <Compile Include="Delegates\ObjectHooveredEventHandler.cs" />
+    <Compile Include="Modify\Opacity.cs" />
     <Compile Include="Modify\Select.cs" />
     <Compile Include="Modify\Highlight.cs" />
     <Compile Include="Modify\Restore.cs" />
