--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -122,6 +122,8 @@
     </Compile>
     <Compile Include="Interfaces\ISection3DObject.cs" />
     <Compile Include="Query\DefaultViewSettings.cs" />
+    <Compile Include="Query\CurveAppearance.cs" />
+    <Compile Include="Query\TextAppearance.cs" />
     <Compile Include="Query\SurfaceAppearance.cs" />
     <Compile Include="Query\SpaceDiagram.cs" />
     <Compile Include="Query\AirHandlingUnitDiagram.cs" />
